Fix alignment issue with some checkbox groups in the family registration form.

--- a/public/styles/site/_forms.scss
+++ b/public/styles/site/_forms.scss
@@ -4,7 +4,8 @@ form > div {
 }
 
 .form-group {
-  margin-bottom: 15px;
+    position: relative;
+    margin-bottom: 15px;
 }
 
 .checkbox-inline,
